[gd_scene load_steps=3 format=3 uid="uid://cm4k17v5d18rv"]

[ext_resource type="Texture2D" uid="uid://cg6kjc0fk5h1u" path="res://assets/arts_graphic/icon/godot icons/UndoRedo.svg" id="1_26s5q"]
[ext_resource type="Script" uid="uid://dyy7hiqlm5uti" path="res://assets/arts_graphic/ui/menu/Properties/propertie_check_box.gd" id="1_yshmt"]

[node name="PropertieCheckBox" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
offset_right = 600.0
offset_bottom = 30.0
size_flags_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("1_yshmt")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 26
text = "Name"

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="CheckBox" type="CheckBox" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumHintControl" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="ResetButtonControl" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ResetButton" type="TextureButton" parent="ResetButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.08
disabled = true
texture_normal = ExtResource("1_26s5q")
texture_pressed = ExtResource("1_26s5q")
texture_hover = ExtResource("1_26s5q")
ignore_texture_size = true
stretch_mode = 4

[connection signal="toggled" from="Control/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="ResetButtonControl/ResetButton" to="." method="_on_reset_button_toggled"]
